# sentiment-classifier

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
monitoring/: prometheus.yml
src/app/: main.py
src/inference/: infer.py  training.py
src/schemas/: rest.py
test/: test_api.py
