[project]
name = "trustpilot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "apitally[fastapi]>=0.14.4",
    "datasets>=3.2.0",
    "fastapi>=0.115.6",
    "httpx>=0.28.1",
    "ipykernel>=6.29.5",
    "mlflow>=2.19.0",
    "nltk>=3.9.1",
    "prometheus-fastapi-instrumentator>=7.0.2",
    "pydantic>=2.10.5",
    "pytest>=8.3.4",
    "requests>=2.32.3",
    "torch>=2.5.1",
    "torchvision>=0.20.1",
    "transformers[torch]>=4.48.0",
    "uvicorn>=0.34.0",
]


[tool.setuptools.packages.find]
where = []
